# smaht-pipeline-utils

./: CHANGELOG.rst  LOG.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main-publish.yml  main.yml
docs/: api.rst  conf.py  contribute_pipeline.rst  deploy_pipeline.rst  deploy_pipelines.rst  functions.rst  index.rst  install.rst  pipeline_utils.rst  portal_objects.rst  repo.rst  yaml_file_format.rst  yaml_file_reference.rst  yaml_metaworkflow.rst  yaml_software.rst  yaml_workflow.rst  yamlmwfl.rst  yamlref.rst  yamlwfl.rst
pipeline_utils/: __main__.py  deploy_pipeline.py  deploy_pipeline_legacy.py  deploy_pipeline_yaml.py  pipeline_deploy.py
pipeline_utils/lib/: check_lines.py  yaml_parser.py
pipeline_utils/schemas/: YamlFrmt.py  YamlMWfl.py  YamlRef.py  YamlSftwr.py  YamlWfl.py  schema.py  yaml_file_format.py  yaml_file_reference.py  yaml_metaworkflow.py  yaml_reference_file.py  yaml_reference_genome.py  yaml_software.py  yaml_workflow.py
schemas/: YamlMWfl.py  YamlWfl.py
tests/: test_check_schemas.py  test_pipeline_deploy.py  test_yaml_file_format.py  test_yaml_file_reference.py  test_yaml_metaworkflow.py  test_yaml_reference_genome.py  test_yaml_software.py  test_yaml_workflow.py
tests/repo_correct/dockerfiles/bar/: Dockerfile
tests/repo_correct/portal_objects/: file_format.yaml  file_reference.yaml  reference_genome.yaml  software.yaml
tests/repo_correct/portal_objects/metaworkflows/: A_gatk-HC-GT.yaml  QC_test.yaml
tests/repo_correct/portal_objects/workflows/: A_gatk-HC.yaml  B_minimal-gatk-HC.yaml
tests/repo_error/portal_objects/: file_format.yaml  file_reference.yaml  software.yaml
tests/repo_error/portal_objects/metaworkflows/: A_gatk-HC-GT.yaml  B_minimal-gatk-HC-GT.yaml
tests/repo_error/portal_objects/workflows/: A_gatk-HC.yaml  B_minimal-gatk-HC.yaml
