[tool.poetry]
name = "portal-pipeline-utils"
version = "2.1.0.1b5"  # TODO: To become 3.0.0
description = "Utilities for deploying pipelines and interfacing with portal infrastructure."
authors = [
        "Michele Berselli <berselli.michele@gmail.com>",
        "CGAP & SMaHT Team"
]
license = "MIT"
repository = 'https://github.com/dbmi-bgm/portal-pipeline-utils'
readme = "README.md"
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3'
]
packages = [
    { include="pipeline_utils" }
]


[tool.poetry.dependencies]
python = ">=3.8,<3.12"
dcicutils = "7.12.0.2b9"
boto3 = "^1.28.56"
awscli = "^1.29.56"
jsonschema = "^4.7.2"
magma-suite = "1.5.0.3b5"


[tool.poetry.dev-dependencies]
pytest = "*"


[tool.poetry.scripts]
pipeline_utils = "pipeline_utils.__main__:main"
publish-to-pypi = "dcicutils.scripts.publish_to_pypi:main"


[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
